compressed all banner images, fixed blue text showing on gallery page on mobile

--- a/src/app/gallery/gallery.module.css
+++ b/src/app/gallery/gallery.module.css
@@ -54,7 +54,7 @@
 .activeTab {
     background-color: var(--khaki);
     transition: all 0.5s ease-in-out;
-    /* color: white; */
+    color: black;
 }
 .inactiveTab {
     background-color: var(--altWhite);
